refactor: use isEmpty and getFirst for user login in AuthService